--- a/src/index.css
+++ b/src/index.css
@@ -140,6 +140,7 @@ body {
     border-radius: 50%;
 }
 .section-bg{
+    overflow: hidden;
     position: absolute;
     width: 100%;
     height: 100vh;
@@ -284,6 +285,12 @@ body {
     }
     .section-name{
         font-size: 32px;
+    }
+    .text-wrapper{
+        height: 60%;
+    }
+    .welcome h3{
+        bottom: 25%;
     }
     h2{
         font-size: 32px !important;
