--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 html {
-    overflow-x: hidden;
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
+    overscroll-behavior: none;
   }
 body {
+    overscroll-behavior: none;
     overflow-x: hidden;
     overflow-y: scroll;
     margin: 0;
