--- a/src/index.css
+++ b/src/index.css
@@ -23,36 +23,43 @@ body {
     width: 100%;
     height: 150px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     position: fixed;
     z-index: 20;
-    padding: 20px;
+    padding: 0 20px;
     top: 0;
+    left: 0;
     box-sizing: border-box;
     span{
-        max-width: 36px;
-        width: auto;
         position: relative;
     }
 }
 .logo {
-    margin-right: auto;
+    flex: 1;
+    display: flex;
+    align-items: center;
 }
 
 .icon-nav-container {
-    margin-left: auto;
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 .nav-menu{
     display: flex;
     gap: 10px;
     text-align: center;
-    align-items: center;
     display: none;
     color: white;
     h3{
-        
+        cursor: pointer;
         text-decoration: underline;
+    }
+    span{
+        font-size: 24px;
+        cursor: pointer;
     }
 }
 .section{
@@ -62,6 +69,7 @@ body {
     height: 100vh;
 }
 .section-name{
+    flex: 1;
     transition: opacity 1s ease-in-out;
     transition: all 1s;
     font-size: 48px;
